sandc/test/fixtures/astRegression/shouldFail/genericFunctionCall/MissingParens.sand
pub class MissingParens {
    missing() {
        foo<int>
    }
}